--- a/components/agenda/index.css
+++ b/components/agenda/index.css
@@ -9,7 +9,7 @@
 @media (min-width: 36rem) {
   /* the first agenda day has two items */
   .agenda > :first-child {
-    flex-basis: 100%;
+    /*flex-basis: 100%;*/
   }
 }
 
